# Better-Prompt

./: .gitignore  .impeccable.md  README.md  SKILL_README.md  TODOS.md  dev  dev-autopilot-skill.md  howgolangworks.md  howgolangworks2.md  howtowritepromptv1.md  howtowritepromptv2.md  howtowritepromptv3.md  prompt-control-modules.md  prompt-dev-toolkit.md  prompt-generator.md  prompt-playbook-examples.md  prompt-playbook-quick-reference.md  service  skill-contract.md  skill-integration.md  skill-invocation.md  skill-overview.md
autopilot-agent/: CONTEXT.md  DECISIONS.md  PROGRESS.md  README.md  pyproject.toml  spike_test.py
autopilot-agent/src/agents/: architect.py  base.py  checkpoint.py  coder.py  decomposer.py  requirement.py  reviewer.py  spike.py
autopilot-agent/src/cli/: main.py
autopilot-agent/src/config/: settings.py
autopilot-agent/src/mechanisms/: backtrack.py  bug_driven_evolution.py  change_request.py  circuit_breaker.py  heartbeat.py  scope_lock.py
autopilot-agent/src/orchestrator/: main_graph.py  parallel.py  phase_graphs.py
autopilot-agent/src/prompts/: architect.py  checkpoint.py  coder.py  decomposer.py  requirement.py  reviewer.py  spike.py
autopilot-agent/src/state/: database.py  models.py  queries.py  schema.py
autopilot-agent/src/tools/: code_writer.py  file_manager.py
autopilot-agent/tests/: test_mechanisms.py  test_state.py
betterprompt/backend/: .env.example  alembic.ini  betterprompt.db  pyproject.toml
betterprompt/backend/alembic/: env.py
betterprompt/backend/app/: main.py
betterprompt/backend/tests/: test_init_db.py  (+7 more)
(+189 files in other folders)
