[project]
name = "autopilot-agent"
version = "0.1.0"
description = "Multi-Agent system for automated full-cycle software development"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
autopilot = "src.cli.main:app"
